# streamlit-elasticsearch-connection

./: README.md  main.py  pyproject.toml
elasticsearch_connection/: __init__.py  connection.py
tests/: connection.py  test_connection.py
