[tool.poetry]
name = "st-elasticsearch-connection"
version = "0.1.0"
description = "Streamlit Elasticsearch Connection"
authors = ["Ashton Sidhu <ashton.sidhu1994@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4"
elasticsearch = "^8.8.2"
streamlit = "^1.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
