[tool.poetry]
name = "elasticsearch-connection"
version = "0.1.0"
description = "Streamlit Elasticsearch Connection"
authors = ["Sidhu Labs <ashton@sidhulabs.ca>"]
readme = "README.md"
packages = [{include = "elasticsearch_connection"}]

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "^8.8.2"
streamlit = "^1.25.0"
pandas = "^2.0.3"
eland = "^8.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.280"
pytest = "^7.4.0"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
